--- a/notebooks/01_model_fitting.ipynb
+++ b/notebooks/01_model_fitting.ipynb
@@ -5,7 +5,9 @@
    "id": "86a5992a-9e5a-4315-a6ef-8918303d5f21",
    "metadata": {},
    "source": [
-    "# Model fitting to experimental data"
+    "# Model fitting to experimental data\n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/cghiaus/var_cond/HEAD?labpath=notebooks%2F01_model_fitting.ipynb)"
    ]
   },
   {
