--- a/notebooks/02_dirichlet.ipynb
+++ b/notebooks/02_dirichlet.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "# Plane wall with Dirichlet boundary conditions\n",
     "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/cghiaus/var_cond/HEAD?labpath=notebooks%2F02_dirichlet.ipynb)\n",
+    "\n",
     "Let's consider heat transfer in steady-state, without internal source in a plane wall for which the conductivity varies linearly:\n",
     "\n",
     "$$\n",
