--- a/notebooks/02_2_dirichlet_2ord.ipynb
+++ b/notebooks/02_2_dirichlet_2ord.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# Plane wall with Dirichlet boundary conditions: quadratic variation of conductivity\n",
     "\n",
+    "# Model fitting to experimental data\n",
+    "\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/cghiaus/var_cond/HEAD?labpath=notebooks%2F02_2_dirichlet_2ord.ipynb)\n",
+    "\n",
     "Let's consider heat transfer in steady-state, without internal sources, in a plane wall for which the conductivity varies quadratically with temperature:\n",
     "\n",
     "$$\n",
