--- a/notebooks/03_wall_steady.ipynb
+++ b/notebooks/03_wall_steady.ipynb
@@ -436,7 +436,7 @@
    "id": "ec3562d7-5af3-44a0-b7b2-1051ded352d0",
    "metadata": {},
    "source": [
-    "> Figure 6. Temperature distribution in a wall with linear thermal conductivity in the case of absrbed irradiation of the surfaces."
+    "> Figure 6. Temperature distribution in a wall with linear thermal conductivity in the case of absorbed irradiation of the surfaces."
    ]
   },
   {
