--- a/notebooks/03_wall_steady.ipynb
+++ b/notebooks/03_wall_steady.ipynb
@@ -79,9 +79,9 @@
     "\n",
     "- Numerically solve the thermal circuit for the wall.\n",
     "\n",
-    "- By using the temperatures for the surface of the wall fond numerically, solve analitically the Dirichelet problem.\n",
+    "- By using the temperatures for the surface of the wall (which were found numerically), solve analitically the Dirichelet problem.\n",
     "\n",
-    "- Plot on the same graph the temperature dstribution obtained numerically and analytically, and the line between the surface temperatures."
+    "- Plot on the same graph the temperature dstribution obtained numerically and analytically, and a line between the surface temperatures."
    ]
   },
   {
