--- a/notebooks/03_wall_steady.ipynb
+++ b/notebooks/03_wall_steady.ipynb
@@ -66,18 +66,17 @@
     "\n",
     "The simulation consists in:\n",
     "\n",
-    "- From the linear (polynomial) model \n",
-    "$$\n",
+    "- From the linear (polynomial) model, \n",
+    "$\n",
     "\\lambda = a T + b\n",
-    "$$\n",
-    "\n",
-    "obtain the cannonical conductivity model.\n",
+    "$,\n",
+    "obtain the cannonical conductivity model:\n",
     "\n",
     "$$\n",
     "\\lambda = \\lambda_0(1 + \\beta (T - T_b))\n",
     "$$\n",
     "\n",
-    "- Numerically solve the thermal circuit for the wall.\n",
+    "- Numerically solve the thermal circuit for the wall (i.e., find the temperatures and the flow rates).\n",
     "\n",
     "- By using the temperatures for the surface of the wall (which were found numerically), solve analitically the Dirichelet problem.\n",
     "\n",
