--- a/notebooks/03_wall_steady.ipynb
+++ b/notebooks/03_wall_steady.ipynb
@@ -66,11 +66,7 @@
     "\n",
     "The simulation consists in:\n",
     "\n",
-    "- From the linear (polynomial) model, \n",
-    "$\n",
-    "\\lambda = a T + b\n",
-    "$,\n",
-    "obtain the cannonical conductivity model:\n",
+    "- From the linear (polynomial) model, $\\lambda = a T + b$, obtain the cannonical conductivity model:\n",
     "\n",
     "$$\n",
     "\\lambda = \\lambda_0(1 + \\beta (T - T_b))\n",
