--- a/notebooks/03_wall_steady.ipynb
+++ b/notebooks/03_wall_steady.ipynb
@@ -275,6 +275,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e4b85c3-fc10-4540-a568-02248efb8520",
+   "metadata": {},
+   "source": [
+    "If the base temperature is choses as the mean of surface temperatures, the error in estimating the flow rate by variable conductivity, $\\lambda = \\lambda_0 (1 + \\beta (T - T_b))$,  or by constant conductivity, $\\lambda_0$, is zero."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e54b3eba-abff-461e-97a5-7093356c3bcf",
