--- a/notebooks/01_model_fitting.ipynb
+++ b/notebooks/01_model_fitting.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "$$\\lambda = a \\theta + b $$\n",
     "\n",
-    "they founded the coeffcients:\n",
+    "they founded the coefficients:\n",
     "$$a = 0.0002$$\n",
     "$$b = 0.04$$\n",
     "\n",
@@ -48,7 +48,21 @@
     "\n",
     "$$\\beta = \\frac{a}{b + a \\theta_0}$$\n",
     "\n",
-    "Note that $\\theta_0$ can be selected arbitrarely. It coresponds to the base temperature for which $\\lambda = \\lambda_0$. One choice could be $\\theta_0 = 0 \\ \\mathrm{°C}$ and another one $\\theta_0 = (T_0 + T_1)/2$."
+    "Note that $\\theta_0$ can be selected arbitrarily. It corresponds to the base temperature for which $\\lambda = \\lambda_0$. One choice could be:\n",
+    "\n",
+    "$\\theta_0 = 0 \\ \\mathrm{°C}$\n",
+    "\n",
+    "for which\n",
+    "\n",
+    "$$\\lambda = \\lambda_0 (1 + \\beta \\theta)$$\n",
+    "\n",
+    "and another one \n",
+    "\n",
+    "$$\\theta_0 = (T_0 + T_1)/2$$\n",
+    "\n",
+    "for which\n",
+    "\n",
+    "$$\\lambda = \\lambda_0$$"
    ]
   },
   {
@@ -186,7 +200,7 @@
     "and\n",
     "$$\\theta_0 = - \\frac{b}{2a}$$\n",
     "\n",
-    "Note that in this case $\\theta_0$ depends on the regresion coefficients (it is not independent)."
+    "Note that in this case $\\theta_0$ depends on the regression coefficients (it is not independent)."
    ]
   },
   {
@@ -247,7 +261,7 @@
     "\n",
     "This is based on the condition that the heat rate is the same whether the conductivity is constant (equal to average) or variable.\n",
     "\n",
-    "The average conductivity can be used todetermine the heat rate in steady-state. For example, for a plane wall, The average heat conductivity over a range of temperatures is (Cengel Y. & Ghajar A. 2020, eq. 2-76):\n",
+    "The average conductivity can be used to determine the heat rate in steady state. For example, for a plane wall, The average heat conductivity over a range of temperatures is (Cengel Y. & Ghajar A. 2020, eq. 2-76):\n",
     "\n",
     "$$\n",
     "\\dot Q = \\frac{\\bar \\lambda A }{L}(T_1 - T_0) = \\frac{A}{L}  \\int_{T_0}^{T_1}\\lambda d \\theta\n",
@@ -325,9 +339,9 @@
     "\n",
     "- Cengel, Y. A., & Ghajar, A. J. (2015). Heat and Mass Transfer: Fundamentals and Applications, 5th Edition, McGraw-Hill Education. New York. ISBN 978-0-07-339818-1\n",
     "\n",
-    "- [Cengel Y. & Ghajar A. (2020)](https://www.studocu.com/in/document/priyadarshini-engineering-college/english/htchapter-02-xyz/42524065). Chapter 2 Heat condution equatiion, in Heat and Mass Transfer: Fundamentals and Applications, 6th Edition, McGraw-Hill Education, ISBN10: 0073398195 | ISBN13: 9780073398198\n",
+    "- [Cengel Y. & Ghajar A. (2020)](https://www.studocu.com/in/document/priyadarshini-engineering-college/english/htchapter-02-xyz/42524065). Chapter 2 Heat conduction equation, in Heat and Mass Transfer: Fundamentals and Applications, 6th Edition, McGraw-Hill Education, ISBN10: 0073398195 | ISBN13: 9780073398198\n",
     "\n",
-    "- [Cengel Y. & Ghajar A. (2020a)](https://www.studocu.com/row/document/celal-bayar-universitesi/engineering-mechanics/heat-chap02-094-this-is-summaries/11179160). Chapter 2 Heat condution equatiion, in Heat and Mass Transfer: Fundamentals and Applications, 6th Edition, Solution manual, McGraw-Hill Education\n",
+    "- [Cengel Y. & Ghajar A. (2020a)](https://www.studocu.com/row/document/celal-bayar-universitesi/engineering-mechanics/heat-chap02-094-this-is-summaries/11179160). Chapter 2 Heat conduction equation, in Heat and Mass Transfer: Fundamentals and Applications, 6th Edition, Solution manual, McGraw-Hill Education\n",
     "\n",
     "- [Berardi U. et al.(2018)](https://doi.org/10.3390/en11040872). On the Effects of Variation of Thermal Conductivity in Buildings in the Italian Construction Sector, Energies, 11(4), 872\n",
     "\n",
@@ -335,7 +349,7 @@
     "\n",
     "- [Higgis, B.G. (2020)](https://doi.org/10.13140/RG.2.2.17178.36805) Heat Conduction with Variable Thermal Conductivity, University of California, Davis\n",
     "\n",
-    "- [Wilson, G., et al.(2014)](https://doi.org/10.1371/journal.pbio.1001745). Best practices for scientific computing. PLoS biology, 12(1), e1001745.\n",
+    "- [Wilson, G., et al. (2014)](https://doi.org/10.1371/journal.pbio.1001745). Best practices for scientific computing. PLoS biology, 12(1), e1001745.\n",
     "\n",
     "- [Wilson, G., et al. (2017)](https://doi.org/10.1371/journal.pcbi.1005510). Good enough practices in scientific computing. PLoS computational biology, 13(6), e1005510.\n",
     "\n",
