--- a/notebooks/02_dirichlet.ipynb
+++ b/notebooks/02_dirichlet.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/cghiaus/var_cond/HEAD?labpath=notebooks%2F02_dirichlet.ipynb)\n",
     "\n",
-    "Let's consider heat transfer in steady-state, without internal source in a plane wall for which the conductivity varies linearly:\n",
+    "Let's consider heat transfer in steady state, without internal source in a plane wall for which the conductivity varies linearly:\n",
     "\n",
     "$$\n",
     "\\lambda = \\lambda_0(1 + \\beta (T - T_b))\n",
@@ -464,7 +464,7 @@
     "\\left \\| \\varepsilon \\right \\|_\\infty ≡ \\mathrm{max}(|\\theta - \\theta_0|) = \\mathrm{max}(|\\theta_{[0]} - \\theta_{0,[0]}|,... ,|\\theta_{[n]} - \\theta_{0,[n]}|)\n",
     "$$\n",
     "\n",
-    "where $\\theta_0$ is the previous temperature and $\\theta$ is the current temperature. In this case, the convergence is reached faster if the temperature difference between the surfaces of the plane wall are smaller. If the convergence of conductances were used, the number of interations would be the same, independetly on the temperature difference."
+    "where $\\theta_0$ is the previous temperature and $\\theta$ is the current temperature. In this case, the convergence is reached faster if the temperature difference between the surfaces of the plane wall are smaller. If the convergence of conductances were used, the number of iterations would be the same, independently of the temperature difference."
    ]
   },
   {
@@ -474,7 +474,7 @@
    "source": [
     "#### Iterative method\n",
     "\n",
-    "Considering conductances as intial guess, the [iterative method](https://en.m.wikipedia.org/wiki/Iterative_method) is:\n",
+    "Considering conductances as initial guess, the [iterative method](https://en.m.wikipedia.org/wiki/Iterative_method) is:\n",
     "\n",
     "- initially, consider conductances calculated with conductivity $\\lambda_0$:\n",
     "\n",
@@ -579,8 +579,8 @@
     "$$\n",
     "\n",
     "where:\n",
-    "- $q_0$ - flow rate caulculated with constant cnductivity $\\lambda_0$;\n",
-    "- $q_a$ - flow rate caulculated analitically."
+    "- $q_0$ - flow rate calculated with constant conductivity $\\lambda_0$;\n",
+    "- $q_a$ - flow rate calculated analytically."
    ]
   },
   {
@@ -669,7 +669,7 @@
    "id": "abf84644-567f-48e0-b068-8cd831661783",
    "metadata": {},
    "source": [
-    "> Figure 2. Comparaison between numerical, analytical and linear solutions when conductance varies linearly with temperature. The wall has temperature boundary conditions."
+    "> Figure 2. Comparison between numerical, analytical and linear solutions when conductance varies linearly with temperature. The wall has temperature boundary conditions."
    ]
   },
   {
@@ -745,7 +745,7 @@
     "\n",
     "a, b, c = 8.364e-06, -3.857e-04, 3.128e-02  # fitted λ(T) = a·T² + b·T + c\n",
     "\n",
-    "# Model λ(T) = a*T + b to λ(T) = λ0 * (1 + β * (T - Tb))\n",
+    "# Model λ(T) = a·T² + b·T + c to λ(T) = λ0·(1 + β·(T - Tb)²)\n",
     "λ0, β, Tb = var_cond.poly2model([a, b, c], Tb, deg)\n",
     "conductivity_model = [λ0, β, Tb, deg]\n",
     "\n",
@@ -764,7 +764,7 @@
    "id": "426c3f24-340f-4588-b24f-a2b053f752d0",
    "metadata": {},
    "source": [
-    "> Figure 3. Comparaison between numerical, analytical and linear solutions when conductance varies quadratically with temperature. The wall has temperature boundary conditions."
+    "> Figure 3. Comparison between numerical, analytical and linear solutions when conductance varies quadratically with temperature. The wall has temperature boundary conditions."
    ]
   },
   {
@@ -845,13 +845,13 @@
     "\n",
     "__Notes:__\n",
     "\n",
-    "- For linear model, the base temperature $T_b$ can be chosen arbitrarely and $\\bar \\theta = 0$ has as solution $T_b = (T_0 + T_1) / 2$ for which the mean conductivity is constant $\\bar \\lambda = \\lambda_0$. \n",
+    "- For linear model, the base temperature $T_b$ can be chosen arbitrarily and $\\bar \\theta = 0$ has as solution $T_b = (T_0 + T_1) / 2$ for which the mean conductivity is constant $\\bar \\lambda = \\lambda_0$. \n",
     "\n",
-    "- For quadratic model, the base temperature $T_b$ results from the fitting the model to data (i.e., it is not arbitraly) and $\\bar \\theta = 0$, where\n",
+    "- For quadratic model, the base temperature $T_b$ results from the fitting the model to data (i.e., it is not arbitrarily) and $\\bar \\theta = 0$, where\n",
     "$\n",
     "\\bar{\\theta} = \\frac{T_0^2 + T_0 T_1 + T_1^2}{3} - T_b (T_0 + T_1 - T_b)\n",
     "$,\n",
-    "has no real solution. The mean conductivity is a function of temperature: $\\bar \\lambda = \\lambda_0 (1 + \\beta \\bar \\theta)$"
+    "has no real solution. The mean conductivity is a function of mean temperature: $\\bar \\lambda = \\lambda_0 (1 + \\beta \\bar \\theta).$"
    ]
   },
   {
@@ -923,7 +923,7 @@
     "\n",
     "- [Ouksel T, (2020)](http://tele-ens.univ-oeb.dz/moodle/pluginfile.php/131239/mod_resource/content/1/Cours_Transfert_3L_Maintenance-Industrielle_OUKSEL.pdf). Cours Transfert Thermique, Université Larbi Ben M’hidi Oum El Bouaghi, Algeria\n",
     "\n",
-    "- [Cengel Y. & Ghajar A. (2020)](https://www.studocu.com/row/document/celal-bayar-universitesi/engineering-mechanics/heat-chap02-094-this-is-summaries/11179160). Chapter 2 Heat condution equatiion, in Heat and Mass Transfer: Fundamentals and Applications, 6th Edition, Solution manual, McGraw-Hill Education"
+    "- [Cengel Y. & Ghajar A. (2020)](https://www.studocu.com/row/document/celal-bayar-universitesi/engineering-mechanics/heat-chap02-094-this-is-summaries/11179160). Chapter 2 Heat conduction equation, in Heat and Mass Transfer: Fundamentals and Applications, 6th Edition, Solution manual, McGraw-Hill Education"
    ]
   }
  ],
