--- a/notebooks/01_model_fitting.ipynb
+++ b/notebooks/01_model_fitting.ipynb
@@ -28,9 +28,9 @@
    "metadata": {},
    "source": [
     "## Linear model\n",
-    "The thermal conductivity of some construction materials vary linearly with temperature in the temperature range -10 °C ... 50 °C (Berardi et al. 2018).\n",
+    "The thermal conductivity of some construction materials vary linearly with temperature in the temperature range -10 °C ... 50 °C ([Berardi et al., 2018](https://doi.org/10.3390/en11040872)).\n",
     "\n",
-    "Let's consider the data reported by Berardi et al. (2018) and find a linear model for variable thermal conductivity of fiberglass. For the fitted model:\n",
+    "Let's consider the data reported by [Berardi et al. (2018)](https://doi.org/10.3390/en11040872) and find a linear model for variable thermal conductivity of fiberglass. For the fitted polynomial model:\n",
     "\n",
     "$$\\lambda(T) = a T + b $$\n",
     "\n",
@@ -38,7 +38,7 @@
     "$$a = 0.0002$$\n",
     "$$b = 0.04$$\n",
     "\n",
-    "The coefficients of the linear model for thermal conductivity,\n",
+    "The coefficients of the linear canonical model for thermal conductivity,\n",
     "\n",
     "$$\\lambda = \\lambda_0 (1 + \\beta (T - T_b))$$\n",
     "\n",
@@ -184,11 +184,11 @@
    "metadata": {},
    "source": [
     "### Quadratic model\n",
-    "[Berardi et al.(2018)](https://doi.org/10.3390/en11040872) measured the variation of thermal conductivity with temperature for polyisocyanurate. In this case, the fitted model is quadratic:\n",
+    "[Berardi et al.(2018)](https://doi.org/10.3390/en11040872) measured the variation of thermal conductivity with temperature for polyisocyanurate. In this case, the fitted polynomial model is quadratic:\n",
     "\n",
     "$$\\lambda = a T^2 + b T + c$$\n",
     "\n",
-    "The coefficients of the quadratic model:\n",
+    "The coefficients of the quadratic canonical model:\n",
     "\n",
     "$$\\lambda = \\lambda_0 (1 + \\beta (T - T_b)^2)$$\n",
     "\n",
@@ -256,13 +256,13 @@
    },
    "source": [
     "## Average heat conductivity\n",
-    "The average heat conductivity over a range of temperatures is ([Cengel Y. & Ghajar A. (2020)](https://www.studocu.com/in/document/priyadarshini-engineering-college/english/htchapter-02-xyz/42524065) eq. 2-75):\n",
+    "The average heat conductivity over a range of temperatures is ([Cengel & Ghajar (2020)](https://www.studocu.com/in/document/priyadarshini-engineering-college/english/htchapter-02-xyz/42524065) eq. 2-75):\n",
     "\n",
     "$$\\bar{\\lambda} = \\frac{\\int_{T0}^{T1} \\lambda d \\theta}{T_1 - T_0}$$\n",
     "\n",
     "This is based on the condition that the heat rate is the same whether the conductivity is constant (equal to average) or variable.\n",
     "\n",
-    "The average conductivity can be used to determine the heat rate in steady state. For example, for a plane wall, the average heat conductivity over a range of temperatures is ([Cengel Y. & Ghajar A. (2020)](https://www.studocu.com/in/document/priyadarshini-engineering-college/english/htchapter-02-xyz/42524065), eq. 2-76):\n",
+    "The average conductivity can be used to determine the heat rate in steady state. For example, for a plane wall, the average heat conductivity over a range of temperatures is ([Cengel & Ghajar (2020)](https://www.studocu.com/in/document/priyadarshini-engineering-college/english/htchapter-02-xyz/42524065), eq. 2-76):\n",
     "\n",
     "$$\n",
     "\\dot Q = \\frac{\\bar \\lambda A }{L}(T_1 - T_0) = \\frac{A}{L}  \\int_{T_0}^{T_1}\\lambda d \\theta\n",
@@ -358,6 +358,14 @@
     "\n",
     "- [Cookiecutter Data Science](https://drivendata.github.io/cookiecutter-data-science/), GitHub"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa2c995b-4bd1-466c-a005-2a9246801a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
